chapter-2/exercise-1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-app-svc
spec:
  type: ClusterIP
  selector:
    app: picture-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8081
